--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -22,6 +22,7 @@ $screen-xl-min: 1200px;
 :root{
     --white: #ffffff;
     --champagne-pink-light: #F3DFDA;
+    --champagne-pink-med: #F6E7E3;
     --champagne-pink-dark: #90817D;
     --ruddy-bronze-light: #421908;
     --indigo-dark: #516189;
