--- a/dev/scss/sections/blog/_highlighted-articles.scss
+++ b/dev/scss/sections/blog/_highlighted-articles.scss
@@ -2,3 +2,89 @@
     Highlighted articles- blog
 ============= */
 
+#highlighted-articles{
+
+    #bus-sup-img{
+        width: 100%;
+        height: 20vw;
+        background-image: url('../img/blog/business-support.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 0% 0%;
+        @include lg{
+            height: 15vw;
+        }
+        @include xl{
+            height: 10vw;
+        }
+    }
+    #com-res-img{
+        width: 100%;
+        height: 20vw;
+        background-image: url('../img/blog/com-resources.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 0% 50%;
+        @include lg{
+            height: 15vw;
+        }
+        @include xl{
+            height: 10vw;
+        }
+    }
+    #our-mission-img{
+        width: 100%;
+        height: 20vw;
+        background-image: url('../img/blog/our-mission.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 0% 100%;
+        @include lg{
+            height: 15vw;
+        }
+        @include xl{
+            height: 10vw;
+        }
+    }
+
+    background-color: var(--champagne-pink-med);
+
+    ul{
+        li{
+            margin: 0;
+            margin-top: 16px;
+            padding-bottom: 16px;
+            h3{
+                margin: 8px 0;
+            }
+        }
+        display: grid;
+        grid-template-columns: 50% auto;
+        gap: 16px;
+        @include md{
+            grid-template-columns: auto 30% 30% auto;
+            grid-template-areas: ". a-one a-two .";
+            #bus-sup{
+                grid-area: a-one;
+            }
+            #com-res{
+                grid-area: a-two;
+            }
+        }
+        @include lg{
+            grid-template-columns: 33% 33% auto;
+            grid-template-areas: "a-one a-two a-three";
+            #our-miss{
+                grid-area: a-three;
+            }
+        }
+
+    }
+    h1{
+        font-weight: 400;
+        padding-top: 16px;
+        @include md{
+            text-align: center;
+        }
+    }
+}
