--- a/dev/scss/sections/homepage/_services.scss
+++ b/dev/scss/sections/homepage/_services.scss
@@ -17,8 +17,8 @@
  
         }
         @include lg{
-            width: 15vw;
-            height:15vw;
+            width: 18vw;
+            height:18vw;
         }
         @include xl{
             width: 220px;
@@ -40,8 +40,8 @@
         
         }
         @include lg{
-            width: 15vw;
-            height:15vw;
+            width: 18vw;
+            height:18vw;
         }
         @include xl{
             width: 220px;
@@ -61,8 +61,8 @@
             height: 25vw;
         }
         @include lg{
-            width: 15vw;
-            height:15vw;
+            width: 18vw;
+            height:18vw;
         }
         @include xl{
             width: 220px;
@@ -82,8 +82,8 @@
             background-position: 0% 50%;
         }
         @include lg{
-            width: 15vw;
-            height:15vw;
+            width: 18vw;
+            height:18vw;
         }
         @include xl{
             width: 220px;
@@ -117,6 +117,7 @@
         }
         #gifts{
             grid-area: gifts
+            
         }
 
         @include md{
@@ -129,7 +130,7 @@
         }
         @include lg{
             grid-template-columns: auto 195px 195px 195px 195px auto;
-            grid-template-areas: ". floral plants cafe gifts .";
+            grid-template-areas: ". floral plants cafe gifts ."
         }
         @include xl{
             grid-template-columns: auto 220px 220px 220px 220px auto;
@@ -151,8 +152,33 @@
         // height: 60.5%;
         // width5 100%;
     }
+
     p{
         padding-top: 6px;
+    }
+
+    @include lg{
+        text-align: center;
+        padding-top: 16px;
+        display: grid;
+        grid-template-areas: 
+        "pic"
+        "title"
+        "copy";
+        .bgi-services{
+            grid-area: pic;
+  
+            margin: 0;
+        }
+
+        h4{
+            grid-area: title;
+            padding-top: 8px;
+        }
+        p{
+            grid-area: copy;
+         
+        }
     }
 }
 
@@ -160,9 +186,11 @@
 
 #service-cards-all{
     background-color: var(--champagne-pink-light);
-    border-radius: 0 0 16px 16px;
     padding-top: 8px;
     padding-bottom: 16px;
+    li{
+        margin: 0;
+    }
 }
 
 #carousel{
