--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -451,6 +451,7 @@ body ul {
   border: none;
   text-align: left;
   padding-left: 10px;
+  width: 100%;
 }
 .icon-input a:link, .icon-input a:visited {
   color: var(--champagne-pink-dark);
@@ -730,7 +731,6 @@ footer #brand-icons li {
 footer #copywrite {
   text-align: center;
   margin-bottom: 25px;
-  display: grid;
   grid-template-areas: ". icons ." ". copywrite .";
 }
 footer #copywrite #brand-icons {
@@ -745,6 +745,7 @@ footer #copywrite #copywrite {
   }
   footer #copywrite p {
     margin-left: auto;
+    margin-top: 10px;
   }
 }
 footer #newsletter-btn {
@@ -1131,10 +1132,11 @@ footer #newsletter-btn {
 #posts #category-search {
   display: grid;
   gap: 16px;
-  grid-template-areas: "posts cat cat cat" "s-in s-in s-in but";
+  grid-template-areas: ". posts cat cat cat ." ". s-in s-in s-in but .";
 }
 #posts #category-search h2 {
   grid-area: posts;
+  margin: 6px 0;
 }
 #posts #category-search #cat {
   grid-area: cat;
@@ -1149,13 +1151,29 @@ footer #newsletter-btn {
   #posts #category-search {
     grid-template-areas: ". posts . . cat cat cat ." ". s-in s-in s-in s-in s-in but .";
   }
+  #posts #category-search h2 {
+    margin: 0;
+  }
 }
 @media (min-width: 1024px) {
   #posts #category-search {
     grid-template-areas: ". . posts . . . . . . . . ." ". . cat cat cat s-in s-in s-in s-in but . .";
   }
 }
+@media (min-width: 768px) {
+  #posts #smaller-b-posts {
+    display: grid;
+    grid-template-columns: 50% auto;
+    gap: 16px;
+  }
+}
+@media (min-width: 1200px) {
+  #posts #smaller-b-posts {
+    grid-template-columns: 33% 33% auto;
+  }
+}
 #posts #pagination {
+  color: var(--tea-green-dark);
   display: flex;
   justify-content: center;
 }
@@ -1163,14 +1181,26 @@ footer #newsletter-btn {
   display: flex;
   align-items: center;
 }
-#posts #cards-ind {
+#posts #pagination ul li a {
+  color: var(--tea-green-dark);
+}
+#posts .cards-ind {
   margin: 0;
   display: grid;
-  grid-template-columns: 70px auto 70px;
+  grid-template-columns: 40px auto 40px;
   grid-template-areas: ". content .";
 }
-#posts #cards-ind > div {
+#posts .cards-ind > div {
   grid-area: content;
+}
+#posts .cards-ind > div > div {
+  display: flex;
+  justify-content: flex-end;
+}
+@media (min-width: 768px) {
+  #posts .cards-ind {
+    display: block;
+  }
 }
 
 /* =============
