--- a/dev/scss/sections/blog/_posts.scss
+++ b/dev/scss/sections/blog/_posts.scss
@@ -3,59 +3,102 @@
 ============= */
 
 
-#posts{
-    #category-search{
+#posts {
+    #category-search {
         display: grid;
         gap: 16px;
-    
-        grid-template-areas: 
-        "posts cat cat cat"
-        "s-in s-in s-in but";
+        grid-template-areas:
+            ". posts cat cat cat ."
+            ". s-in s-in s-in but .";
 
-        h2{
+        h2 {
             grid-area: posts;
+            margin: 6px 0;
         }
-        #cat{
+
+        #cat {
             grid-area: cat;
         }
-        #search-blog{
+
+        #search-blog {
             grid-area: s-in;
         }
-        #blog-search-btn{
+
+        #blog-search-btn {
             grid-area: but;
         }
 
-        @include md{
-            grid-template-areas: 
-            ". posts . . cat cat cat ."
-            ". s-in s-in s-in s-in s-in but .";
+        @include md {
+            grid-template-areas:
+                ". posts . . cat cat cat ."
+                ". s-in s-in s-in s-in s-in but .";
+
+            h2 {
+                margin: 0;
+            }
         }
 
-        @include lg{
-            grid-template-areas: 
-            ". . posts . . . . . . . . ."
-            ". . cat cat cat s-in s-in s-in s-in but . .";
+        @include lg {
+            grid-template-areas:
+                ". . posts . . . . . . . . ."
+                ". . cat cat cat s-in s-in s-in s-in but . .";
         }
     }
 
-    #pagination{
+    #smaller-b-posts {
+        @include md{
+            display: grid;
+            grid-template-columns: 50% auto;
+            gap: 16px;
+        }
+        @include xl{
+            grid-template-columns: 33% 33% auto;
+        }
+    }
+
+
+
+    #pagination {
+        color: var(--tea-green-dark);
         display: flex;
         justify-content: center;
-        ul{
+
+        ul {
             display: flex;
             align-items: center;
+
+            li {
+                a {
+                    color: var(--tea-green-dark);
+
+                }
+
+            }
+
         }
     }
 
-    #cards-ind{
+    .cards-ind {
         margin: 0;
         display: grid;
-        grid-template-columns: 70px auto 70px;
+        grid-template-columns: 40px auto 40px;
         grid-template-areas: ". content .";
-        >div{
+
+        >div {
             grid-area: content;
+
+            >div {
+                display: flex;
+                justify-content: flex-end;
+            }
         }
+
+        @include md{
+            display: block;
+        }
+
         
+
     }
-  
+
 }
