--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -107,6 +107,25 @@ body{
     }
 }
 
+.hero-h1{
+    
+        font-family: 'BenchNine', sans-serif;
+        font-size: rem-calc(32);
+        color: var(--white);
+        letter-spacing: 1rem;
+        @include md{
+            font-size: rem-calc(63);
+        }
+        @include lg{
+            font-size: rem-calc(95);
+        }
+        @include xl{
+            font-size: rem-calc(107);
+        }
+        
+    
+}
+
 .hide-till-md{
     display: none;
     @include md{
