--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -20,6 +20,7 @@ header {
     left: 0;
     top: 0;
     width: 100%;
+    z-index: 1000;
 
     #logo-container {
         display: flex;
@@ -29,6 +30,7 @@ header {
     #icons-head {
         margin-left: auto;
         margin-right: 16px;
+     
    
 
     }
